# jupiter-fan-control-deb

./: README.md  prepare.sh  pyproject.toml
debian/: changelog  control  rules
usr/lib/systemd/system/: jupiter-fan-control.service
usr/share/jupiter-fan-control/: fancontrol.py  fremont-config.yaml  galileo-config.yaml  jupiter-config.yaml
